[package]
name = "imrefs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
nix = "0.26.2"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.24.2", features = ["full"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
